# types-plams

./: .gitignore  README.md  __init__.pyi  py.typed  pyproject.toml  setup.py
mol/: __init__.pyi  atom.pyi  bond.pyi  molecule.pyi
scm-stubs/plams/: __init__.pyi
scm-stubs/plams/core/: __init__.pyi  basejob.pyi  errors.pyi  functions.pyi  jobmanager.pyi  jobrunner.pyi  results.pyi  settings.pyi
scm-stubs/plams/interfaces/: __init__.pyi
scm-stubs/plams/interfaces/adfsuite/: __init__.pyi  adf.pyi  ams.pyi  crs.pyi  dftb.pyi  scmjob.pyi
scm-stubs/plams/interfaces/molecule/: __init__.pyi  ase.pyi  rdkit.pyi
scm-stubs/plams/mol/: atom.pyi  bond.pyi  identify.pyi  molecule.pyi  pdbtools.pyi
scm-stubs/plams/recipes/: ams_crs.pyi  global_minimum.pyi
scm-stubs/plams/tools/: converters.pyi  geometry.pyi  kftools.pyi  periodictable.pyi  reaction_energies.pyi  units.pyi
